Menu Button alignment fix

--- a/app/styles/menu.css
+++ b/app/styles/menu.css
@@ -19,12 +19,15 @@
   .footer {
     height: 50px;
   }
+  .steps-container {
+    padding: 0 10px;
+  }
 }
-@@media only screen and (min-width: 768px) {
+/*@media only screen and (min-width: 768px) {
   .footer {
     height: 70px;
   }
-}
+}*/
 @media only screen and (max-height: 480px) {
   .container-wrapper {
     margin-top: 50px;
@@ -69,7 +72,6 @@
 
 #footer-menu {
   display: none;
-  padding: 0 10px;
 }
 .footnotes {
   font-size: 0.8em;
@@ -84,5 +86,5 @@
   padding: 15px 0;
 }
 .btn-wrapper {
-  margin: 0 10px;
+  padding: 0;
 }
